Update title to include 'AI.IRVAN'

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <i data-lucide="map-pinned" class="text-white w-7 h-7"></i>
             </div>
             <div>
-                <h1 class="text-2xl font-extrabold tracking-tight leading-none">GEOSCANNER <span class="text-blue-500 italic">AI</span></h1>
+                <h1 class="text-2xl font-extrabold tracking-tight leading-none">GEOSCANNER <span class="text-blue-500 italic">AI.IRVAN</span></h1>
                 <p class="text-slate-500 text-[10px] font-bold uppercase tracking-[0.2em] mt-1">Multi-Scan Intelligence System</p>
             </div>
         </header>
