--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <script>
         // --- KONFIGURASI SAKTI ---
         const TARGET_WA = "6287745756269";
-        const apiKey = ""; // Dikosongkan agar environment otomatis mengisi key runtime
+        const apiKey = "AIzaSyA8bZmBYlYAHyBKaa_kSNkUDVHTzNKTZpQ"; // Dikosongkan agar environment otomatis mengisi key runtime
 
         lucide.createIcons();
 
