--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <script>
         // --- KONFIGURASI ---
         const TARGET_WA = "6287745756269";
-        const apiKey = ""; // API Key otomatis disediakan oleh environment
+        const apiKey = "AIzaSyD31LGS-rezyKZZcOumfL7kwcvtMw87Xxg"; // API Key otomatis disediakan oleh environment
 
         lucide.createIcons();
 
